force-app/main/default/objects/FundingAwardForecast__c/FundingAwardForecast__c.object-meta.xml
<CustomObject>
    <description>Stores details of a monthly forecast against award or baseline</description>
    <label>Funding Award Forecast</label>
    <nameField>
        <displayFormat>FOR-{00000}</displayFormat>
        <label>Funding Award Forecast Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Funding Award Forecasts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>