force-app/main/default/objects/FundingAwardForecast__c/fields/Average_Homes_Per_Batch__c.field-meta.xml
<CustomField>
    <fullName>Average_Homes_Per_Batch__c</fullName>
    <label>Average Homes Per Batch</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>