force-app/main/default/objects/FundingAwardForecast__c/fields/Co_funding_total_spend__c.field-meta.xml
<CustomField>
    <fullName>Co_funding_total_spend__c</fullName>
    <formula>Co_funding_A_A_spend__c + Co_funding_Capital_Spend__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Co-funding total spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>