force-app/main/default/objects/FundingAwardForecast__c/fields/Combined_A_A_spend__c.field-meta.xml
<CustomField>
    <fullName>Combined_A_A_spend__c</fullName>
    <formula>Co_funding_A_A_spend__c +  Grant_A_A_Spend__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Combined A&amp;A spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>