force-app/main/default/objects/FundingAwardForecast__c/fields/Combined_Capital_Spend__c.field-meta.xml
<CustomField>
    <fullName>Combined_Capital_Spend__c</fullName>
    <formula>Co_funding_Capital_Spend__c +  Grant_Capital_Spend__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Combined Capital Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>