force-app/main/default/objects/FundingAwardForecast__c/fields/Cumulative_Grant_Claim_forecasted__c.field-meta.xml
<CustomField>
    <fullName>Cumulative_Grant_Claim_forecasted__c</fullName>
    <label>Cumulative Grant Claim forecasted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>