force-app/main/default/objects/FundingAwardForecast__c/fields/Energy_Savings_kWh__c.field-meta.xml
<CustomField>
    <fullName>Energy_Savings_kWh__c</fullName>
    <inlineHelpText>Total energy savings (SPs)</inlineHelpText>
    <label>Energy Savings (kWh)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>