force-app/main/default/objects/FundingAwardForecast__c/fields/Forecast_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Start_Date__c</fullName>
    <description>Allows forecasts to be set up independently of Award updates</description>
    <label>Forecast Start Date</label>
    <type>Date</type>
</CustomField>