force-app/main/default/objects/FundingAwardForecast__c/fields/Grant_A_A_Spend__c.field-meta.xml
<CustomField>
    <fullName>Grant_A_A_Spend__c</fullName>
    <inlineHelpText>Enter the cumulative actual/forecast Admin and Ancillary spend per month, from grant only</inlineHelpText>
    <label>Grant A&amp;A Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>