force-app/main/default/objects/FundingAwardForecast__c/fields/Grant_Claim_forecasted_per_month_of_deli__c.field-meta.xml
<CustomField>
    <fullName>Grant_Claim_forecasted_per_month_of_deli__c</fullName>
    <label>Grant Claim forecasted per month of deli</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>