force-app/main/default/objects/FundingAwardForecast__c/fields/Grant_Total_Spend__c.field-meta.xml
<CustomField>
    <fullName>Grant_Total_Spend__c</fullName>
    <formula>Grant_Capital_Spend__c + Grant_A_A_Spend__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grant Total Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>