force-app/main/default/objects/FundingAwardForecast__c/fields/Installations_Completed__c.field-meta.xml
<CustomField>
    <fullName>Installations_Completed__c</fullName>
    <label>Installations Completed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>