force-app/main/default/objects/FundingAwardForecast__c/fields/No_of_Homes_Assessed__c.field-meta.xml
<CustomField>
    <fullName>No_of_Homes_Assessed__c</fullName>
    <description>KPI 2 - No. of Homes Assessed</description>
    <inlineHelpText>KPI 2 - No. of Homes Assessed</inlineHelpText>
    <label>No. of Homes Assessed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>