force-app/main/default/objects/FundingAwardForecast__c/fields/No_of_Homes_Started_Installations__c.field-meta.xml
<CustomField>
    <fullName>No_of_Homes_Started_Installations__c</fullName>
    <description>KPI 3 - No. of Homes Started Installations</description>
    <inlineHelpText>KPI 3 - No. of Homes Started Installations</inlineHelpText>
    <label>No. of Homes Started Installations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>