force-app/main/default/objects/FundingAwardForecast__c/fields/No_of_Homes_Suitable_For_Retrofit__c.field-meta.xml
<CustomField>
    <fullName>No_of_Homes_Suitable_For_Retrofit__c</fullName>
    <description>KPI 1 - No. of Homes Identified as Suitable for Retrofit</description>
    <inlineHelpText>KPI 1 - No. of Homes Identified as Suitable for Retrofit</inlineHelpText>
    <label>No. of Homes Suitable For Retrofit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>