force-app/main/default/objects/FundingAwardForecast__c/fields/No_of_Homes_Validated__c.field-meta.xml
<CustomField>
    <fullName>No_of_Homes_Validated__c</fullName>
    <description>KPI 1 - No. of Homes Validated</description>
    <inlineHelpText>KPI 1 - No. of Homes Validated</inlineHelpText>
    <label>No. of Homes Validated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>