force-app/main/default/objects/FundingAwardForecast__c/fields/Number_of_Batches__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Batches__c</fullName>
    <label>Number of Batches</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>