force-app/main/default/objects/FundingAwardForecast__c/fields/Parent_Baseline__c.field-meta.xml
<CustomField>
    <fullName>Parent_Baseline__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Baseline</label>
    <referenceTo>FundingBaseline__c</referenceTo>
    <relationshipLabel>Funding Award Forecasts</relationshipLabel>
    <relationshipName>Forecasts</relationshipName>
    <type>Lookup</type>
</CustomField>