force-app/main/default/objects/FundingAwardForecast__c/fields/Parent_Update_Date__c.field-meta.xml
<CustomField>
    <fullName>Parent_Update_Date__c</fullName>
    <formula>Parent_Funding_Award_Update__r.Date_of_Update__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Update Date</label>
    <type>Date</type>
</CustomField>