force-app/main/default/objects/FundingAwardForecast__c/fields/Project_Team_Established__c.field-meta.xml
<CustomField>
    <fullName>Project_Team_Established__c</fullName>
    <label>Project Team Established (MS)</label>
    <type>Date</type>
</CustomField>