force-app/main/default/objects/FundingAwardForecast__c/fields/Related_Actual__c.field-meta.xml
<CustomField>
    <fullName>Related_Actual__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Actual</label>
    <referenceTo>FundingAwardActual__c</referenceTo>
    <relationshipLabel>Related Forecast</relationshipLabel>
    <relationshipName>Funding_Award_Forecasts</relationshipName>
    <type>Lookup</type>
</CustomField>