force-app/main/default/objects/FundingAwardForecast__c/fields/Total_Co_funding_toward_on_gas_LCH_offer__c.field-meta.xml
<CustomField>
    <fullName>Total_Co_funding_toward_on_gas_LCH_offer__c</fullName>
    <label>Total Co-funding toward on-gas LCH offer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>