force-app/main/default/objects/FundingAwardForecast__c/fields/x_Co_funding_total_spend__c.field-meta.xml
<CustomField>
    <fullName>x_Co_funding_total_spend__c</fullName>
    <inlineHelpText>Towards homes going to and beyond EPC B</inlineHelpText>
    <label>x Co-funding total spend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>