force-app/main/default/objects/FundingAwardForecast__c/fields/x_Combined_A_A_spend__c.field-meta.xml
<CustomField>
    <fullName>x_Combined_A_A_spend__c</fullName>
    <inlineHelpText>Combined A&amp;A spend</inlineHelpText>
    <label>x Combined A&amp;A spend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>