force-app/main/default/objects/FundingAwardForecast__c/fields/x_Combined_Capital_Spend__c.field-meta.xml
<CustomField>
    <fullName>x_Combined_Capital_Spend__c</fullName>
    <inlineHelpText>Enter the cumulative actual/forecast Capital spend per month, including both grant and co-funding</inlineHelpText>
    <label>x Combined Capital Spend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>