force-app/main/default/objects/FundingAwardForecast__c/fields/xEnergy_Savings__c.field-meta.xml
<CustomField>
    <fullName>xEnergy_Savings__c</fullName>
    <label>xEnergy Savings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>