force-app/main/default/objects/FundingAwardForecast__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Funding_Award__c</columns>
    <columns>Parent_Baseline_Version__c</columns>
    <columns>Parent_Funding_Award_Update__c</columns>
    <columns>Related_Actual__c</columns>
    <columns>Forecast_Month__c</columns>
    <columns>Parent_Update_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>