force-app/main/default/objects/FundingAwardForecast__c/listViews/LG_Funding_Award_Forecasts.listView-meta.xml
<ListView>
    <fullName>LG_Funding_Award_Forecasts</fullName>
    <columns>NAME</columns>
    <columns>Funding_Award__c</columns>
    <columns>Parent_Baseline_Version__c</columns>
    <columns>Parent_Funding_Award_Update__c</columns>
    <columns>Related_Actual__c</columns>
    <columns>No_of_Homes_Validated__c</columns>
    <columns>No_of_Homes_Assessed__c</columns>
    <columns>No_of_Homes_Started_Installations__c</columns>
    <columns>No_of_Homes_Treated_at_Least_1_Measure__c</columns>
    <columns>No_of_Homes_Completed__c</columns>
    <columns>Forecast_Month__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Funding_Award__c</field>
        <operation>contains</operation>
        <value>WHLG</value>
    </filters>
    <label>LG Funding Award Forecasts</label>
</ListView>