force-app/main/default/objects/FundingAwardForecast__c/listViews/SHF_Funding_Award_Forecasts.listView-meta.xml
<ListView>
    <fullName>SHF_Funding_Award_Forecasts</fullName>
    <columns>NAME</columns>
    <columns>Funding_Award__c</columns>
    <columns>Parent_Funding_Award_Update__c</columns>
    <columns>Related_Actual__c</columns>
    <columns>No_of_Homes_Suitable_For_Retrofit__c</columns>
    <columns>No_of_Homes_Ready_for_Installs_to_Start__c</columns>
    <columns>No_of_Homes_Started_Installations__c</columns>
    <columns>No_of_Homes_All_Installations_Completed__c</columns>
    <columns>No_of_Homes_Completed__c</columns>
    <columns>Forecast_Month__c</columns>
    <columns>Parent_Baseline_Version__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Funding_Award__c</field>
        <operation>contains</operation>
        <value>SHF3</value>
    </filters>
    <label>SHF Funding Award Forecasts</label>
</ListView>